# dump

./: LICENSE  README.md
AlgoVizNext/: avizmath.py  main.py  renderer.py  test.py
Aviz/: build.sh  ffmpeg.go  geom.glsl  main.go
DynConf/: DynConfClient.cpp  DynConfServer.cpp
ExpEngine/: .gitignore  .gitmodules  asset.c  build-android.sh  build.sh  client.c  client_app.c  client_unitybuild.c  coreclr_host.c  coreclrhost.h  deadcode.c  debug.c  debug.h  editor.c  editor_server_client_shared.c  fib.c  firstpersoncontroller.c  game.c  gameserver.c  input.c  libs.h  libs_static.c  map.c  mathsc.h  memory.c  memory.h  menu.c  native_api.c  networking.c  networkinput.h  ntransform.c  opengl_renderer.c  opengl_renderer.h  physics.h  physics_system_physx.cpp  play.c  (+19 more)
OpenMultiplayerGame/: .gitignore  .gitmodules  CMakeLists.txt  build.sh
OpenMultiplayerGame/src/: application.cpp  application.h  build.sh  camera.h  entity.cpp  entity.h  game.cpp  game.h  macros.h  transform.cpp  transform.h
OpenMultiplayerGame/src/Dotnet/: dotnet.cpp  dotnet.h
OpenMultiplayerGame/src/Dotnet/Managed/: Binding.cs  Class1.cs
OpenMultiplayerGame/src/GameWorld/: chunk.cpp  chunkmanager.cpp  chunkmanager.h  world.cpp  world.h  worldgenerator.cpp
OpenMultiplayerGame/src/Libs/imgui/: imgui_impl_sdl_gl3.cpp
OpenMultiplayerGame/src/Maths/: maths.h  perlin.cpp
OpenMultiplayerGame/src/Networking/: client.cpp  client.h  networkedinput.cpp  networkedinput.h  server.cpp  server.h  serverplayer.cpp  serverplayer.h
OpenMultiplayerGame/src/Physics/: btrigidbodycomponent.cpp  btrigidbodycomponent.h  character.cpp  character.h  physics.cpp  physics.h
OpenMultiplayerGame/src/Player/: gui.cpp  gui.h  player.cpp  player.h  spectator.cpp  spectator.h
OpenMultiplayerGame/src/Renderer/: renderer.h
OpenMultiplayerGame/src/Renderer/OpenGL/: renderer.cpp
(+173 files in other folders)
